--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>portfolio page</title>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
         <link rel="stylesheet" href="main.css">
+        <link rel="icon" type="img/favicon.png" sizes="16x16" href="img/favicon.png">
         <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet"> -->
         <link href="https://fonts.googleapis.com/css?family=PT+Serif|Source+Sans+Pro&display=swap" rel="stylesheet">
     </head>
@@ -123,6 +124,12 @@
             <h3>Jquery</h3>
             <div class="jq-bar">
             </div>
+            <h3>Git</h3>
+            <div class="git-bar">
+            </div>
+            <h3>Linux</h3>
+            <div class="linux-bar">
+            </div>
         </section>
         <div class="testimonials">
             <div class="inner">
@@ -135,7 +142,7 @@
                         <div class="testimonial">
                             <div class="containerLeft">
                                 <img src="img/nin.png" alt="person" class="imgLeft">
-                                <p class="lettersLeft">django</p>
+                                <p class="lettersLeft">Django</p>
                             </div>
                             <div class="function">
                                 <p>backend-dev</p>
@@ -146,7 +153,7 @@
                         <div class="testimonial">
                             <div class="container">
                                 <img src="img/nin.png" alt="person" class="img">
-                                <p class="letters"></p>
+                                <p class="letters">DRF</p>
                             </div>
                             <div class="function">
                                 <p>designer</p>
@@ -157,7 +164,7 @@
                         <div class="testimonial">
                             <div class="containerRight">
                                 <img src="img/nin.png" alt="person" class="imgRight">
-                                <p class="lettersRight">vue.js</p>
+                                <p class="lettersRight">Vue.js</p>
                             </div>
                             <div class="function">
                                 <p>frontend-dev</p>
