--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>Speak English, Dutch, Russian.</p>
                 <ul class="white">
                     <h3>My projects</h3>
-                    <li><a href="https://www.memoryoverflow.nl/">Project Blog</a></li>
+                    <li><a href="https://www.medsandbox.nl/en/">Project Blog</a></li>
                     <li><a href="https://www.tanyacoding.nl/">Project Create Idea</a></li>
                 </ul>
             </div>
