--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>Speak English, Dutch, Russian.</p>
                 <ul class="white">
                     <h3>My projects</h3>
-                    <li><a href="https://www.medsandbox.nl/en/">Project Blog</a></li>
+                    <li><a href="https://www.medsandbox.nl/en/">Medical Blog</a></li>
                     <li><a href="https://www.tanyacoding.nl/">Project Create Idea</a></li>
                 </ul>
             </div>
@@ -39,16 +39,14 @@
                         <h4>Django</h4>
                         <ul class="shift">
                             <li>allauth</li>
-                            <li>translation</li>
-                            <li>tinymce</li>
-                            <li>aws s3 (images)</li>
-                            <li>captcha</li>
-                            <li>google maps</li>
-                            <li>datePicker</li>
+                            <li>(dynamic) translation</li>
+                            <li>ckeditor</li>
+                            <li>tree-bread (nested comments)</li>
+                            <li>aws s3 (images)</li>                            
                             <li>logging</li>
+                            <li>tests</li>
                         </ul>
-                        <h4>Jquery</h4>
-                        <h4>Ajax</h4>
+                        <h4>Htmx</h4>                        
                         <h4>Deployment</h4>
                         <ul class="shift">
                             <li>nginx</li><li>gunicorn</li><li>supervisor</li>
@@ -121,8 +119,8 @@
             <h3>CSS</h3>
             <div class="css-bar">
             </div>
-            <h3>Jquery</h3>
-            <div class="jq-bar">
+            <h3>Htmx</h3>
+            <div class="htmx-bar">
             </div>
             <h3>Git</h3>
             <div class="git-bar">
