--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
                             <li>(dynamic) translation</li>
                             <li>ckeditor</li>
                             <li>tree-bread (nested comments)</li>
-                            <li>aws s3 (images)</li>                            
-                            <li>logging</li>
-                            <li>tests</li>
+                            <li>aws s3 (images)</li>                           
+                            
                         </ul>
                         <h4>Htmx</h4>                        
                         <h4>Deployment</h4>
                         <ul class="shift">
-                            <li>nginx</li><li>gunicorn</li><li>supervisor</li>
+                            <li>nginx</li><li>gunicorn</li>
                         </ul>
                     </figure>
                     <figure class="front">
@@ -87,7 +86,7 @@
                         </ul>
                         <h4>Deployment</h4>
                         <ul class="shift">
-                            <li>nginx</li><li>gunicorn</li><li>supervisor</li>
+                            <li>nginx</li><li>gunicorn</li>
                         </ul>
                     </figure>
                     <figure class="front">
@@ -106,9 +105,7 @@
             </div>
             <h3>Django REST framework</h3>
             <div class="rest-bar level">
-            </div>
-            <h3>JS</h3>
-            <div class="js-bar">
+            </div>            
             </div>
             <h3>Vue.js</h3>
             <div class="vue-bar">
