--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
                             <li>ckeditor</li>
                             <li>tree-bread (nested comments)</li>
                             <li>aws s3 (images)</li>                           
+                            <li>unittests</li>                           
                             
                         </ul>
-                        <h4>Htmx</h4>                        
+                        <h4>Front End</h4>
+                        <ul class="shift">
+                            <li>htmx</li>
+                        </ul>                        
                         <h4>Deployment</h4>
                         <ul class="shift">
                             <li>nginx</li><li>gunicorn</li>
