--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Like dry humor.</p>
                 <p>Speak English, Dutch, Russian.</p>
                 <ul class="white">
-                    <h3>My projects</h3>
+                    <h3>My project</h3>
                     <li><a href="https://www.medsandbox.nl/en/">Medical Blog</a></li>                    
                 </ul>
             </div>
@@ -59,47 +59,7 @@
                         <h3>Blog</h3>
                     </figure>
                 </div>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <figure class="back">
-                        <h3 class="let3">Description</h3>
-                        <h4>Backend</h4>
-                        <ul class="shift">
-                            <li>django</li>
-                            <ul class="shift-nested">
-                                <li>MPTT</li>
-                                <li>logging</li>                                
-                            </ul>
-                            <li>REST framework</li>
-                            <ul class="shift-nested">
-                                <li>djoser auth</li>
-                                <li>JWT based</li>                                
-                            </ul>
-                        </ul>
-                        <h4>AWS S3</h4>
-                        <h4>Front End</h4>
-                        <ul class="shift">
-                            <li>Vue.js 2</li>                            
-                            <ul class="shift-nested">
-                                <li>Nested categories</li>
-                                <li>Recursive comments</li>
-                            </ul>
-                            <li>Vuelidate</li>
-                        </ul>
-                        <h4>Deployment</h4>
-                        <ul class="shift">
-                            <li>nginx</li><li>gunicorn</li>
-                        </ul>
-                    </figure>
-                    <figure class="front">
-                        <h3>More About</h3>
-                        <h3>Create Idea</h3>
-                        <h3>Project</h3>
-                    </figure>
-
-                </div>
-            </div>
+            </div>            
         </section>
         <section class="skills">
             <h1>Skills</h1>
