--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>portfolio page</title>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
         <link rel="stylesheet" href="main.css">
-        <link rel="icon" type="img/favicon.png" sizes="16x16" href="img/favicon.png">
-        <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet"> -->
+        <link rel="icon" type="img/favicon.png" sizes="16x16" href="img/favicon.png">        
         <link href="https://fonts.googleapis.com/css?family=PT+Serif|Source+Sans+Pro&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -55,8 +54,7 @@
                         </ul>
                     </figure>
                     <figure class="front">
-                        <h3>More About</h3>
-                        <h3>Blog</h3>
+                        <h2>More About Medical Blog</h2>                        
                     </figure>
                 </div>
             </div>            
