adjust current skills

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>Open minded and resourceful starter in programming.</p>
                 <p>Passionate about web development in python (django,vue.js).</p>
                 <p>Have experience setting up servers (Digital Ocean, Linode).</p>
-                <p>At this moment studying django REST framework and vue.js</p>
+                <p>At this moment studying django REST framework and devops skills</p>
                 <p>As a starter I am looking for people with complementary skills to work together.</p>
                 <p>I'm optimistic and get on easily with people of all ages.
                 <p>Like dry humor.</p>
